Fix configure --mandir. Tidy up configure.in which allows us to use recent autoconf versions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@ ScrollZ
 
     ! UTF-8 support should now work on OpenBSD out of the box
       (patch by Tomasz Konojacki)
+    ! configure --mandir (reported by NetBSD maintainer)
 
 ------------------------------------------------------------------------------
 
