Fix mIRC colours brown and orange.

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,7 +20,8 @@ ScrollZ
       parameter (reported by NetBSD maintainer)
     ! silly bug where channels that were not bound are displayed
       in current window
-    ! some numerics were not timestamped reported by StTimothy)
+    ! some numerics were not timestamped reported by Tim)
+    ! mIRC colours brown and orange were mixed (reported by Tim's gf kut)
 
 ------------------------------------------------------------------------------
 
