Implement per channel ignore quit.

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@ ScrollZ
       in current window
     ! some numerics were not timestamped reported by Tim)
     ! mIRC colours brown and orange were mixed (reported by Tim's gf kut)
+    ~ IGNORE QUIT now works per channel (hi Jugernaut)
 
 ------------------------------------------------------------------------------
 
