--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 $Id: README.ScrollZ,v 1.16 2009-09-03 16:26:55 f Exp $
 
 This is the readme file for ScrollZ IRC client.
-ScrollZ is copyright (C) 1995-2005 by Flier (flier@scrollz.org).
+ScrollZ is copyright (C) 1995-2005 by Flier (flier@scrollz.info).
 Please read the COPYRIGHT file for licensing information.
 
 For list of changes please see the ChangeLog.ScrollZ file.
