If SSL data is available consume it immediately without relying on select.

--- a/ChangeLog
+++ b/ChangeLog
@@ -64,6 +64,8 @@ NOTE: Homepage has been changed to http://www.scrollz.info/
     + COLMISC color6 is used for URLs
     ! crash in SETAWAY when current window is not connected to a server
     + SET URL_BUFFER_SIZE to set URL buffer size (default is 30 URLs)
+    ! SSL connections should work without pauses before new data is
+      received
 
 ------------------------------------------------------------------------------
 
