Prepare a new release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ Meaning of flags:
 ------------------------------------------------------------------------------
 
 ScrollZ
+ScrollZ v2.3, 11.2.2016
 
 NOTE: Homepage has been changed to http://www.scrollz.info/
 
