--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,11 @@ Meaning of flags:
 ------------------------------------------------------------------------------
 
 ScrollZ
+    ! some more crashes when last server is disconnected
+    ! desktop notification via libnotify for messages and notices
+      (enable it by passing --enable-notify to configure, also
+       read HELP SET NOTIFICATION_LEVEL)
+
 ScrollZ v2.3, 11.2.2016
 
 NOTE: Homepage has been changed to http://www.scrollz.info/
